14.K8S (Helm)/mern/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - vbruksha.dynv6.net
    secretName: quickstart-nginx-tls
  rules:
  - host: vbruksha.dynv6.net
    http:
      paths:
      - path: /mern
        pathType: Prefix
        backend:
          service:
            name: mern-stack-node
            port:
              number: 80
